<resources>
    <string name="app_name">TestApp</string>
    <string name="scan_step1">Select \"SCAN\" button and verify that channels are display in the list </string>
    <string name="scan_step2">Select \"SAVE\" button to save channel list into database</string>
    <string-array name="list_of_test_case">
        <item>Scan Test</item>
        <item>Tuner Test</item>
        <item>Section Filter Test</item>
        <item>Recording Test</item>
        <item>Blocking Port Test</item>
    </string-array>

    <string name="header">TCTS - Taurus CL Test Suite</string>
    <string name="btn_test_all">Test All</string>
    <string name="btn_show_result">Show Result</string>
    <string name="btn_export_result">Export Result</string>
    <string name="scan_test">Scan Test</string>
    <string name="channel_test">Channel List Test</string>
    <string name="dvr_test">DVR Test</string>
    <string name="epg_test">EPG Test</string>
    <string name="media_test">Media Test</string>
    <string name="media_listener_test">Media Event Listener Test</string>
    <string name="sf_test">Section Filter Test</string>
    <string name="sf_event_test"> A. Section Filter Event Test</string>
    <string name="sf_exception_test"> B. Section Filter Exception Test</string>
    <string name="test_result">Test Results</string>

    <!--When you add a new test case, please add a corresponding final variable in ScanTest.java-->
    <string-array name="scan_test_list">
        <item>1.ScanEventListener.Notify</item>
        <item>2.ScanEventListener.notifyScanSaveResultFinished</item>
        <item>3.ScanEventListener.selectConflictedChannelRegion</item>
    </string-array>

    <string-array name="channel_test_list">
        <item>1.ChannelListUpdateListener.onChannelListUpdated</item>
        <item>2.ChannelsCallback.onChannelDataReceived</item>
    </string-array>

    <string-array name="dvr_test_list">
        <item>1.RecordingsCallback.onRecordingReceived</item>
        <item>2.RecordingManager.StateListener.onStated</item>
        <item>3.RecordingManager.StateListener.onStopped</item>
        <item>4.RecordingSession.RecordingSessionCallback</item>
    </string-array>

    <string-array name="epg_test_list"></string-array>

    <string-array name="media_test_list">
        <item>1.ChannelPlayer - TV Stream (Live)</item>
        <item>2.ChannelPlayer - TV Stream (TSR)</item>
        <item>3.ChannelEventListener.onChannelEvent</item>
        <item>4.CaptionControllerEventListener.onDetatch</item>
    </string-array>

    <string-array name="media_event_listener_test">
        <item>1.MediaEventListener.onBeginning</item>
        <item>2.MediaEventListener.onCompletion</item>
        <item>3.MediaEventListener.onError</item>
        <item>4.MediaEventListener.onPrepared</item>
        <item>5.MediaEventListener.onRateChanged</item>
        <item>6.MediaEventListener.onStopped</item>
    </string-array>

    <string-array name="sf_test_list">
        <item>1.SectionFilterException</item>
        <item>2.SectionFilterEvent</item>
    </string-array>

    <string-array name="sf_event_list">
        <item>1.TimeOutEvent</item>
        <item>2.IncompleteFilteringEvent</item>
        <item>3.VersionChangeDetectedEvent</item>
        <item>4.SectionAvailableEvent</item>
        <item>5.EndOfFilteringEvent</item>
    </string-array>

    <string-array name="sf_exception_list">
        <item>1.FilterResourceException</item>
        <item>2.IllegalFilterDefinitionException</item>
        <item>3.ConnectionLostException</item>
        <item>4.InvalidSourceException</item>
        <item>5.NoDataAvailableException</item>
        <item>6.FilteringInterruptedException</item>
    </string-array>
</resources>